2012-02-02  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (file_stat_to_STACK): use off_to_I
	instead of L_to_I for st_size [bug#3483340]
	[S_IFMT]: split st_mode into mknod_type_check and check_chmod_mode

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (mt_main_actions): main thread should be the same as any
	other - initialize time, reader and set normal exit flag

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_lock_helper): fix possible deadlock when acquiring
	a lock released by xcondition_wait()
	(THREAD-INTERRUPT): release thread's _signal_reenter_ok spinlock on
	error

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* xthread.d (testandset) [ARM]: implement spinlocks for ARM

2011-10-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_lock_helper): remove wrong "shortcut" on
	acquiring a lock held by thread that exemption-wait-ed on it
	[bug#3424574]

2011-09-16  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists): call merge-pathnames on the
	truename to ensure that all truenames have non-NIL version because
	a NIL component means "unfilled" (19.2.2.2.1) [bug#3405120]

2011-09-16  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_DECOLONIZE): fix the 2011-07-25 15472 patch
	which broke the native msys/mingw build
	Reported by Dan Stanger <dan.stanger@ieee.org>
	<http://article.gmane.org/gmane.lisp.clisp.devel:22759>

2011-09-14  Sam Steingold  <sds@gnu.org>

	* modules/readline/readline.lisp: include rlconf.h for
	DEFAULT_INPUTRC and SYS_INPUTRC and tilde.h for tilde_expand

2011-09-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean5): do not remove modules.h twice

2011-08-29  Sam Steingold  <sds@gnu.org>

	add interface to VerQueryValue, GetFileVersionInfo et al
	http://msdn.microsoft.com/en-us/library/ms647464(v=vs.85).aspx
	* modules/syscalls/calls.c (OS:FILE-VERSION): add function
	* modules/syscalls/posix.lisp (OS:FILE-VERSION): add structure